cmake_minimum_required(VERSION 3.6)
project(chapter3)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        a.cpp
        AllDefinitions.cpp
        ArgsToInts.cpp
        ArrayAddresses.cpp
        ArrayArguments.cpp
        ArrayIdentifier.cpp
        Arrays.cpp
        Asserts.cpp
        AutoIncrement.cpp
        b.cpp
        Basic.cpp
        Bitwise.cpp
        Boolean.cpp
        CastFromVoidPointer.cpp
        CatsInHats.cpp
        Charlist.cpp
        CommandLineArgs.cpp
        CommaOperator.cpp
        const_cast.cpp
        decrement.cpp
        DynamicDebugFlags.cpp
        Enum.cpp
        example.cpp
        FileStatic.cpp
        FileStatic2.cpp
        FloatingAsBinary.cpp
        Forward.cpp
        FunctionCallCast.cpp
        FunctionTable.cpp
        Global2.cpp
        Globe.cpp
        gotoKeyword.cpp
        Guess.cpp
        Guess2.cpp
        HelloWorld.cpp
        if.cpp
        Ifthen.cpp
        Intvector.cpp
        Mathops.cpp
        Menu.cpp
        Menu2.cpp
        multiply.cpp
        OnTheFly.cpp
        PassAddress.cpp
        PassByValue.cpp
        PassReference.cpp
        PointerArithmetic.cpp
        PointerIncrement.cpp
        PointerIncrement2.cpp
        PointersAndBrackets.cpp
        PointerToFunction.cpp
        precision.cpp
        print_range.cpp
        printBinary.cpp
        printBinary.h
        read.cpp
        read_unknown.cpp
        reinterpret_cast.cpp
        Return.cpp
        Rotation.cpp
        Scope.cpp
        SelfReferential.cpp
        seperate.cpp
        SimpleStruct.cpp
        SimpleStruct2.cpp
        SimpleStruct3.cpp
        sizeof.cpp
        sizeofOperator.cpp
        Specify.cpp
        Static.cpp
        Static_cast.cpp
        StringizingExpression.cpp
        StructArray.cpp
        Sum.cpp
        sumhundred.cpp
        Union.cpp
        VoidPointer.cpp
        YourPets1.cpp
        Yourpets2.cpp)

add_executable(chapter3 ${SOURCE_FILES})